# puppet-gnocchi

./: .fixtures.yml  .gitreview  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.rst  Gemfile  README.md  metadata.json  setup.cfg
examples/: site.pp
manifests/: api.pp  client.pp  config.pp  cors.pp  db.pp  deps.pp  healthcheck.pp  init.pp  logging.pp  metricd.pp  params.pp  policy.pp  statsd.pp  storage.pp
manifests/db/: mysql.pp  postgresql.pp  sync.pp
manifests/keystone/: auth.pp  authtoken.pp
manifests/storage/: ceph.pp  file.pp  influxdb.pp  s3.pp  swift.pp
manifests/wsgi/: apache.pp  uwsgi.pp
releasenotes/notes/: access_log_env_var-60037442d322f7e8.yaml  add-metric-delay-c4b5db22171d9165.yaml  add-metricd-processing-delay-76c234b0727f092a.yaml  add-middlewares-configuration-fdb6048123cc848f.yaml  add-s3-driver-c73d167c81a8b33c.yaml  add_watch_log_file-option-89d790e542d4d081.yaml  added_python_rados_package-0427154d398c9d75.yaml  apache-headers-0091ba375bd625f6.yaml  api-operation_timeout-909cae1732afee42.yaml  api-paste_config-590218f4261661c7.yaml  api_paste_ini-separator-3e39be7a841c71ad.yaml  authtoken-c0b1d26fc3156482.yaml  ceph_timeout-770ca9c5ff60a976.yaml  config-api-paste_ini-7ce01cbf1b62d666.yaml  configure_service-7f4d0478b7e74711.yaml  coordination-package-params-44a361cea767ec76.yaml  default-metricd-to-safer-value-529c85e617105424.yaml  deprecate-api-middlewares-20287ca86b384799.yaml  deprecate-gnocchi-database_connection-65d47012e2bd0579.yaml  deprecate-oslo-log-params-12ed30a5db0e5baf.yaml  (+52 more)
spec/: spec_helper_acceptance.rb
(+47 files in other folders)
