[metadata]
name = puppet-gnocchi
summary = Puppet module for OpenStack Gnocchi
description_file =
    README.md
author = Puppet Labs and OpenStack Contributors
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/puppet-openstack-guide/latest
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
